fix docker docker-compose, add air, complete 1 enp (api->uc->repo) | fix migrations
