# src/app/user/auth/auth_api.go
@@ -6,12 +6,20 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"github.com/MedodsTechTask/app/core"
-	auth "github.com/MedodsTechTask/app/user/auth/share"
+	share "github.com/MedodsTechTask/app/user/auth/share"
 )
 
-func SetupRoutes(r *gin.RouterGroup) {
-	r.GET(core.UserAuthHealthCheck, healthCheck)
-	r.POST(core.UserAuthSignUpEmail, signupEmail)
+type API struct {
+	uc *AuthUseCase
+}
+
+func NewAPI(uc *AuthUseCase) *API {
+	return &API{uc: uc}
+}
+
+func (h *API) SetupRoutes(r *gin.RouterGroup) {
+	r.GET(core.UserAuthHealthCheck, h.healthCheck)
+	r.POST(core.UserAuthSignUpEmail, h.signupEmail)
 }
 
 // @Summary Проверка работоспособности сервиса
@@ -20,7 +28,7 @@ func SetupRoutes(r *gin.RouterGroup) {
 // @Produce json
 // @Success 200
 // @Router /user/auth/health [get]
-func healthCheck(c *gin.Context) {
+func (h *API) healthCheck(c *gin.Context) {
 
 }
 
@@ -28,16 +36,21 @@ func healthCheck(c *gin.Context) {
 // @Tags Auth
 // @Accept json
 // @Produce json
-// @Param request body auth.QEmailSignup true "Данные регистрации"
-// @Success 200 {object} auth.ZEmailSignup
+// @Param request body share.QEmailSignup true "Данные регистрации"
+// @Success 200 {object} share.ZEmailSignup
 // @Router /user/auth/signup/email [post]
-func signupEmail(c *gin.Context) {
-	var req auth.QEmailSignup
+func (h *API) signupEmail(c *gin.Context) {
+	var req share.QEmailSignup
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	res, err := h.uc.SignupEmail(c.Request.Context(), &req)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
 
-	c.JSON(http.StatusOK, req)
+	c.JSON(http.StatusOK, res)
 }
